; ModuleID = '/home/carl/AnghaBench/linux/drivers/regulator/extr_tps65132-regulator.c_tps65132_regulator_is_enabled.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/regulator/extr_tps65132-regulator.c_tps65132_regulator_is_enabled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.regulator_dev = type { i32 }
%struct.tps65132_regulator = type { %struct.tps65132_reg_pdata* }
%struct.tps65132_reg_pdata = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.regulator_dev*)* @tps65132_regulator_is_enabled to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tps65132_regulator_is_enabled(%struct.regulator_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.regulator_dev*, align 8
  %4 = alloca %struct.tps65132_regulator*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.tps65132_reg_pdata*, align 8
  store %struct.regulator_dev* %0, %struct.regulator_dev** %3, align 8
  %7 = load %struct.regulator_dev*, %struct.regulator_dev** %3, align 8
  %8 = call %struct.tps65132_regulator* @rdev_get_drvdata(%struct.regulator_dev* %7)
  store %struct.tps65132_regulator* %8, %struct.tps65132_regulator** %4, align 8
  %9 = load %struct.regulator_dev*, %struct.regulator_dev** %3, align 8
  %10 = call i32 @rdev_get_id(%struct.regulator_dev* %9)
  store i32 %10, i32* %5, align 4
  %11 = load %struct.tps65132_regulator*, %struct.tps65132_regulator** %4, align 8
  %12 = getelementptr inbounds %struct.tps65132_regulator, %struct.tps65132_regulator* %11, i32 0, i32 0
  %13 = load %struct.tps65132_reg_pdata*, %struct.tps65132_reg_pdata** %12, align 8
  %14 = load i32, i32* %5, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds %struct.tps65132_reg_pdata, %struct.tps65132_reg_pdata* %13, i64 %15
  store %struct.tps65132_reg_pdata* %16, %struct.tps65132_reg_pdata** %6, align 8
  %17 = load %struct.tps65132_reg_pdata*, %struct.tps65132_reg_pdata** %6, align 8
  %18 = getelementptr inbounds %struct.tps65132_reg_pdata, %struct.tps65132_reg_pdata* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @IS_ERR(i32 %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %26, label %22

22:                                               ; preds = %1
  %23 = load %struct.tps65132_reg_pdata*, %struct.tps65132_reg_pdata** %6, align 8
  %24 = getelementptr inbounds %struct.tps65132_reg_pdata, %struct.tps65132_reg_pdata* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  store i32 %25, i32* %2, align 4
  br label %27

26:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %27

27:                                               ; preds = %26, %22
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local %struct.tps65132_regulator* @rdev_get_drvdata(%struct.regulator_dev*) #1

declare dso_local i32 @rdev_get_id(%struct.regulator_dev*) #1

declare dso_local i32 @IS_ERR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
